--- a/src/css/common.css
+++ b/src/css/common.css
@@ -3,8 +3,8 @@
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell,
+    'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #fafafa;
@@ -15,4 +15,37 @@ body {
 img {
   display: block;
   max-width: 100%;
+}
+
+button {
+  display: inline-block;
+  padding: 10px;
+  min-height: 40px;
+  text-transform: uppercase;
+}
+
+#datetime-picker {
+  display: inline-block;
+  width: 300px;
+  height: 40px;
+  margin-right: 10px;
+
+  font-size: 18px;
+}
+.timer {
+  margin-top: 30px;
+  display: flex;
+  gap: 30px;
+}
+.field {
+  display: flex;
+  flex-direction: column;
+  font-weight: 600;
+  text-align: center;
+}
+.value {
+  font-size: 32px;
+}
+.label {
+  text-transform: uppercase;
 }
