--- a/src/css/common.css
+++ b/src/css/common.css
@@ -49,3 +49,8 @@ button {
 .label {
   text-transform: uppercase;
 }
+.wrapper {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
